# verre

./: .clang-format  .clang-tidy  .gitmodules  .qmlls.ini  CMakeLists.txt  lint  lint.py  pyproject.toml  vcpkg.json
.github/workflows/: main.yml
src/core/: CMakeLists.txt  renderer.cpp  renderer.hpp  sycl_buffer.hpp  sycl_helpers.hpp
src/ui/: CMakeLists.txt  context.cpp  context.hpp  image_item.cpp  image_item.hpp  main.cpp  main.qml  opaque.hpp
src/utils/: CMakeLists.txt  assume.hpp  exception.hpp  iequal.hpp  log.cpp  log.hpp
